--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: #cccccc;
+  height: 50px;
+  color: #000000;
+  position: sticky;
+  width: 100%;
+  top: 0;
+}
+
+.algorithmTitle {
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
+  flex-grow: 1;
+  padding: 0 10px;
+  font-size: 16px;
+}
+
+.options {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 50px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.optionsBtn {
+  height: 40px;
 }
