--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,12 +1,13 @@
-.header {
+.headerContainer {
     display: flex;
     flex-direction: row;
     background-color: #cccccc;
     height: 50px;
     color: #000000;
-    position: sticky;
     width: 100%;
+    position: sticky;
     top: 0;
+    z-index: 50;
 }
 
 .algorithmTitle {
